add pipeline and make code changes